objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Default_Product_Category__c</fullName>
        <label>Default Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Office</fullName>
                </value>
                <value>
                    <fullName>Large Office(WWLO)</fullName>
                </value>
                <value>
                    <fullName>Custom Office</fullName>
                </value>
                <value>
                    <fullName>PxWe</fullName>
                </value>
                <value>
                    <fullName>Global Access</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>WeMembership</fullName>
                </value>
                <value>
                    <fullName>Desk</fullName>
                </value>
                <value>
                    <fullName>Private Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_Manage_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to show the selective products on manage product page.</description>
        <inlineHelpText>Used to show the selective products on manage product page.</inlineHelpText>
        <label>For Manage Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Office</fullName>
                </value>
                <value>
                    <fullName>Custom Office</fullName>
                </value>
                <value>
                    <fullName>Large Office(WWLO)</fullName>
                    <label>Large Office (WWLO)</label>
                </value>
                <value>
                    <fullName>PxWe</fullName>
                </value>
                <value>
                    <fullName>Global Access</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>WeMembership</fullName>
                </value>
                <value>
                    <fullName>TEEM</fullName>
                </value>
                <value>
                    <fullName>Desk</fullName>
                </value>
                <value>
                    <fullName>WeWork</fullName>
                    <isActive>false</isActive>
                    <label>WeWork</label>
                </value>
                <value>
                    <fullName>WeWork Desks</fullName>
                    <isActive>false</isActive>
                    <label>WeWork Desks</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Default_Product_Category__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>For_Manage_Product__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Products</label>
    </listViews>
</CustomObject>